# Organizador_Emails

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  results.json
organizador_emails/: __main__.py  main.py
organizador_emails/db/: connect.py  insert_data.py
organizador_emails/google_api/: api_connection.py  connect.py  connection.py  service_interface.py
organizador_emails/google_api/gmail/: gmail_service.py
organizador_emails/google_api/gmail/functions/: get_labels.py  get_messages.py
organizador_emails/models/: base_service.py  config.py  response_message.py
organizador_emails/models/db/: emails.py
organizador_emails/utils/: date_parser.py  get_json_info.py  load_config.py
tests/: test_config.py  test_data_parser.py
