[tool.poetry]
name = "organizador-emails"
version = "0.1.0"
description = ""
authors = ["Lyarkh <lcemanuel.emanuel@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "organizador_emails"}]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.95.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
taskipy = "^1.12.0"
pyyaml = "^6.0.1"
rich = "^13.5.2"
textual = "^0.33.0"
pytest = "^7.4.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
blue = "^0.9.1"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
force_lint = "blue . && isort ."
test = "pytest -s -x -vv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
